# TEMPered

./: CMakeLists.txt  manifest.xml  tempered.pc.in
